<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout tools:context=".MainActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.design.widget.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/input_layout_name"
    android:layout_marginTop="10dp">

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_name"
        android:hint="@string/hint_name"/>

</android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/input_layout_lastName"
    android:layout_marginTop="10dp"
    android:layout_below="@id/input_layout_name">

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_lastName"
        android:hint="@string/hint_last_name"/>

</android.support.design.widget.TextInputLayout>


    -<android.support.design.widget.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/input_layout_email"
    android:layout_marginTop="10dp"
    android:layout_below="@id/input_layout_lastName">

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/input_email"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

</android.support.design.widget.TextInputLayout>


    -<android.support.design.widget.TextInputLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/input_layout_phoneNumber"
    android:layout_marginTop="10dp"
    android:layout_below="@id/input_layout_email">

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:id="@+id/input_phoneNumber"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"/>

</android.support.design.widget.TextInputLayout>

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/button_create_contact"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/input_layout_phoneNumber"
        android:layout_centerHorizontal="true"
        android:text="@string/button_new_contact"/>

</RelativeLayout>